simplify dependency injection

--- a/app/config/services.yml
+++ b/app/config/services.yml
@@ -38,6 +38,13 @@ services:
     resource: '../../src/Controller'
     tags: ['controller.service_arguments']
 
+  AppBundle\Api\DataTransformer\:
+    resource: '../../src/Api/DataTransformer/*'
+
+  AppBundle\Api\Filter\:
+    resource: '../../src/Api/Filter/*'
+    tags: ['api_platform.filter']
+
   coopcycle.repository.restaurant: '@AppBundle\Entity\RestaurantRepository'
 
   coopcycle.preparation_time_calculator: '@AppBundle\Utils\PreparationTimeCalculator'
@@ -639,24 +646,6 @@ services:
     public: true
     class: AppBundle\Service\Routing\OsrmWithFallback
 
-  AppBundle\Api\Filter\OrderDateFilter:
-    tags: [ 'api_platform.filter' ]
-
-  AppBundle\Api\Filter\OrderStoreFilter:
-    tags: [ 'api_platform.filter' ]
-
-  AppBundle\Api\Filter\DateFilter:
-    tags: [ 'api_platform.filter' ]
-
-  AppBundle\Api\Filter\UserRoleFilter:
-    tags: [ 'api_platform.filter' ]
-
-  AppBundle\Api\Filter\TaskFilter:
-    tags: [ 'api_platform.filter' ]
-
-  AppBundle\Api\Filter\AssignedFilter:
-    tags: [ 'api_platform.filter' ]
-
   AppBundle\Api\Filter\DeliveryOrderFilter:
     autowire: false
     autoconfigure: false
@@ -1010,19 +999,6 @@ services:
   AppBundle\Security\OrderAccessTokenManager: ~
 
   AppBundle\Mjml\MjmlServerRenderer: ~
-
-  AppBundle\Api\DataTransformer\DeliveryInputDataTransformer: ~
-  AppBundle\Api\DataTransformer\PricingRuleEvaluateInputDataTransformer: ~
-  AppBundle\Api\DataTransformer\RestaurantInputDataTransformer: ~
-  AppBundle\Api\DataTransformer\RemotePushTokenInputDataTransformer: ~
-  AppBundle\Api\DataTransformer\UrbantzWebhookInputDataTransformer: ~
-  AppBundle\Api\DataTransformer\BioDeliverInputDataTransformer: ~
-  AppBundle\Api\DataTransformer\TourInputDataTransformer: ~
-  AppBundle\Api\DataTransformer\StoreAddAddressDataTransformer: ~
-  AppBundle\Api\DataTransformer\UpdateLoopeatFormatsDataTransformer: ~
-  AppBundle\Api\DataTransformer\UpdateLoopeatReturnsDataTransformer: ~
-  AppBundle\Api\DataTransformer\EdenredCredentialsInputDataTransformer: ~
-  AppBundle\Api\DataTransformer\ConfigurePaymentInputDataTransformer: ~
 
   AppBundle\Api\DataTransformer\CartItemInputDataTransformer:
     arguments:
