--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "cypress": "^13.15.0",
     "dotenv": "^8.6.0",
     "form-data": "^2.3.3",
+    "google-libphonenumber": "^3.2.40",
     "lodash": "^4.17.21",
     "promise": "^8.3.0",
     "whatwg-fetch": "^2.0.4",
