--- a/app/config/services.yml
+++ b/app/config/services.yml
@@ -1184,6 +1184,7 @@ services:
   AppBundle\Payment\Gateway\Stripe: ~
   AppBundle\Payment\Gateway\Edenred: ~
   AppBundle\Payment\Gateway\MercadoPago: ~
+  AppBundle\Payment\Gateway\Paygreen: ~
 
   AppBundle\Payment\Gateway:
     arguments:
@@ -1191,6 +1192,7 @@ services:
         stripe: '@AppBundle\Payment\Gateway\Stripe'
         edenred: '@AppBundle\Payment\Gateway\Edenred'
         mercadopago: '@AppBundle\Payment\Gateway\MercadoPago'
+        paygreen: '@AppBundle\Payment\Gateway\Paygreen'
 
   AppBundle\Security\BusinessVoter:
     tags: [ 'security.voter' ]
@@ -1533,3 +1535,6 @@ services:
     tags:
       - { name: kernel.event_subscriber }
 
+  AppBundle\Service\PaygreenManager:
+    arguments:
+      $country: '%country_iso%'
