clean: add link to the beta form, preserve legacy form

--- a/src/Resources/config/routing/admin.yml
+++ b/src/Resources/config/routing/admin.yml
@@ -610,6 +610,18 @@ admin_store_delivery_new:
             back: admin_deliveries
     methods:  [ GET, POST ]
 
+admin_store_delivery_new_beta:
+    path: /admin/stores/{id}/deliveries/new/beta
+    defaults:
+        _controller: AppBundle\Controller\AdminController::newStoreDeliveryReactFormAction
+        layout: 'admin.html.twig'
+        routes:
+            stores: admin_stores
+            store: admin_store
+            success: admin_store_deliveries
+            back: admin_deliveries
+    methods:  [ GET ]
+
 admin_store_delivery_download_images:
     path: /admin/stores/{storeId}/deliveries/{deliveryId}/images/download
     defaults:
