--- a/package.json
+++ b/package.json
@@ -92,6 +92,7 @@
     "eslint-plugin-cypress": "^3.3.0",
     "eslint-plugin-jest": "^24.7.0",
     "eslint-plugin-react": "^7.31.10",
+    "eslint-plugin-react-hooks": "^5.1.0",
     "eslint-plugin-storybook": "^0.6.15",
     "eslint-webpack-plugin": "^2.6.0",
     "font-awesome": "^4.7.0",
