--- a/cypress/fixtures/on_demand_delivery_orders.yml
+++ b/cypress/fixtures/on_demand_delivery_orders.yml
@@ -16,13 +16,27 @@ AppBundle\Entity\Delivery:
           - <identity(new \DateTime('yesterday 19:30:00'))>
     store: "@store_1"
 
+  delivery_{251..1000}:
+    __factory:
+      createWithAddress:
+        - "@warehouse"
+        - "@client_1"
+    __calls:
+      - setPickupRange:
+          - <identity(new \DateTime('yesterday 18:00:00'))>
+          - <identity(new \DateTime('yesterday 18:30:00'))>
+      - setDropoffRange:
+          - <identity(new \DateTime('yesterday 19:00:00'))>
+          - <identity(new \DateTime('yesterday 19:30:00'))>
+    store: '@store_*'
+
 AppBundle\Entity\Sylius\PricingRulesBasedPrice:
-  price_{1..250}:
+  price_{1..1000}:
     __construct:
       - <numberBetween(500, 20000)>
 
 AppBundle\Entity\Sylius\Order:
-  order_{1..250}:
+  order_{1..1000}:
     __factory:
       '@sylius.factory.order::createForDeliveryAndPrice':
         - "@delivery_<current()>"
