--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -28,7 +28,7 @@ jobs:
         run: |
           python -m pip install --upgrade pip
           pip install python-swiftclient python-keystoneclient
-          pip install awscli
+          pip install awscli==1.36
       - name: Compile SDK for production
         run: NODE_ENV=production npm run sdk:build
       - name: Compile assets for production
