--- a/composer.json
+++ b/composer.json
@@ -150,7 +150,8 @@
         "paygreen/paygreen-php": "*",
         "flow-php/parquet": "^0.9.2",
         "flow-php/filesystem": "^0.9.2",
-        "picqer/php-barcode-generator": "^2.4"
+        "picqer/php-barcode-generator": "^2.4",
+        "shipmonk/doctrine-entity-preloader": "^1.0"
     },
     "require-dev": {
         "symfony/phpunit-bridge": "^5.0",
