added: preload entities for 'invoice_line_items*' queries

--- a/app/config/services.yml
+++ b/app/config/services.yml
@@ -952,6 +952,12 @@ services:
     tags:
       - { name: 'api_platform.collection_data_provider', priority: 2 }
 
+  AppBundle\Api\DataProvider\InvoiceLineItemCollectionDataProvider:
+    arguments:
+      $collectionExtensions: !tagged api_platform.doctrine.orm.query_extension.collection
+    tags:
+      - { name: 'api_platform.collection_data_provider', priority: 2 }
+
   AppBundle\Utils\RestaurantFilter:
     arguments:
       - '@routing_service'
