Try to fix cache warmup invokation.

--- a/app/config/services.yml
+++ b/app/config/services.yml
@@ -1511,6 +1511,7 @@ services:
   AppBundle\Paygreen\EnvironmentFactory:
     arguments:
       $environment: '%env(PAYGREEN_ENVIRONMENT)%'
+    lazy: true
 
   Paygreen\Sdk\Payment\V3\Environment:
     factory: '@AppBundle\Paygreen\EnvironmentFactory'
