--- a/app/config/services.yml
+++ b/app/config/services.yml
@@ -1506,6 +1506,7 @@ services:
 
   Paygreen\Sdk\Payment\V3\Environment:
     factory: '@AppBundle\Paygreen\EnvironmentFactory'
+    lazy: true
 
   Paygreen\Sdk\Payment\V3\Client:
     arguments:
