Override translation class.

--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -662,6 +662,9 @@ sylius_product:
         product_variant:
             classes:
                 model: AppBundle\Entity\Sylius\ProductVariant
+            translation:
+                classes:
+                    model: AppBundle\Entity\Sylius\ProductVariantTranslation
         product_option:
             classes:
                 model: AppBundle\Entity\Sylius\ProductOption
