feat: allow to pass custom serialization groups via URL
```javascript
fetch('/api/task?groups=task,address,barcode')
  .then((response) => response.json())
  .then((data) => console.log(data));

```

--- a/app/config/services.yml
+++ b/app/config/services.yml
@@ -1539,3 +1539,8 @@ services:
   AppBundle\Service\PaygreenManager:
     arguments:
       $country: '%country_iso%'
+
+  AppBundle\Serializer\CustomSerializationContextBuiler:
+    decorates: api_platform.serializer.context_builder
+    arguments:
+      $decorated: '@AppBundle\Serializer\CustomSerializationContextBuiler.inner'
