feat: add test for deliverytags

--- a/features/fixtures/ORM/stores.yml
+++ b/features/fixtures/ORM/stores.yml
@@ -1,27 +1,27 @@
 AppBundle\Entity\Base\GeoCoordinates:
   geo_1:
-    __construct: [ "48.864577", "2.333338" ]
+    __construct: ['48.864577', '2.333338']
   geo_2:
-    __construct: [ "48.846656", "2.369052" ]
+    __construct: ['48.846656', '2.369052']
   geo_3:
-    __construct: [ "48.884625", "2.322084" ]
+    __construct: ['48.884625', '2.322084']
 
 AppBundle\Entity\Delivery\PricingRuleSet:
   pricing_rule_set_1:
     name: Default
-    rules: [ '@pricing_rule_1' ]
+    rules: ['@pricing_rule_1']
   pricing_rule_set_2:
     name: Default
-    rules: [ '@pricing_rule_2' ]
+    rules: ['@pricing_rule_2']
   pricing_rule_set_3:
     name: Default
-    rules: [ '@pricing_rule_3' ]
+    rules: ['@pricing_rule_3']
   pricing_rule_set_4:
     name: Default
-    rules: [ '@pricing_rule_4' ]
+    rules: ['@pricing_rule_4']
   pricing_rule_set_impossible:
     name: Default
-    rules: [ '@pricing_rule_impossible' ]
+    rules: ['@pricing_rule_impossible']
 
 AppBundle\Entity\Delivery\PricingRule:
   pricing_rule_1:
@@ -55,17 +55,17 @@ AppBundle\Entity\Address:
     addressLocality: 'Paris'
     postalCode: '75001'
     streetAddress: '272, rue Saint Honoré 75001 Paris 1er'
-    geo: "@geo_1"
+    geo: '@geo_1'
   address_2:
     addressLocality: 'Paris'
     postalCode: '75012'
     streetAddress: '18, avenue Ledru-Rollin 75012 Paris 12ème'
-    geo: "@geo_1"
+    geo: '@geo_1'
   address_3:
     addressLocality: 'Paris'
     postalCode: '75017'
     streetAddress: '18 Rue des Batignolles'
-    geo: "@geo_3"
+    geo: '@geo_3'
 
 AppBundle\Entity\TimeSlot:
   time_slot_1:
@@ -109,54 +109,63 @@ AppBundle\Entity\Package:
     short_code: 'AB'
     color: '#a91de0'
 
+AppBundle\Entity\Tag:
+  tag1:
+    name: 'COLD'
+    color: '#FF0000'
+
+  tag2:
+    name: 'MON TAG'
+    color: '#FF00B4'
+
 AppBundle\Entity\Store:
   store_1:
     name: 'Acme'
-    address: "@address_1"
+    address: '@address_1'
     enabled: true
     pricingRuleSet: '@pricing_rule_set_1'
     packageSet: '@package_set_1'
     timeSlot: '@time_slot_1'
-    timeSlots: [ "@time_slot_1", "@time_slot_2" ]
+    timeSlots: ['@time_slot_1', '@time_slot_2']
     __calls:
-      - addAddress: [ "@address_1" ]
+      - addAddress: ['@address_1']
   store_2:
     name: 'Acme2'
-    address: "@address_2"
+    address: '@address_2'
     enabled: true
     pricingRuleSet: '@pricing_rule_set_2'
     timeSlot: '@time_slot_1'
     __calls:
-      - addAddress: [ "@address_2" ]
+      - addAddress: ['@address_2']
   store_3:
     name: 'Acme3'
-    address: "@address_2"
+    address: '@address_2'
     enabled: true
     pricingRuleSet: '@pricing_rule_set_3'
     packageSet: '@package_set_1'
     timeSlot: '@time_slot_1'
     __calls:
-      - addAddress: [ "@address_2" ]
+      - addAddress: ['@address_2']
   store_4:
     name: 'Acme4'
-    address: "@address_2"
+    address: '@address_2'
     enabled: true
     pricingRuleSet: '@pricing_rule_set_4'
     timeSlot: '@time_slot_1'
     __calls:
-      - addAddress: [ "@address_2" ]
+      - addAddress: ['@address_2']
   store_5:
     name: 'DBSchenker'
-    address: "@address_2"
+    address: '@address_2'
     enabled: true
     transporter: 'DBSCHENKER'
     pricingRuleSet: '@pricing_rule_set_4'
     timeSlot: '@time_slot_1'
     __calls:
-      - addAddress: [ "@address_2" ]
+      - addAddress: ['@address_2']
   store_6:
     name: 'Acme 6'
-    address: "@address_2"
+    address: '@address_2'
     enabled: true
     pricingRuleSet: '@pricing_rule_set_4'
     timeSlot: '@time_slot_1'
@@ -164,33 +173,33 @@ AppBundle\Entity\Store:
       - '@time_slot_1'
       - '@time_slot_2'
     __calls:
-      - addAddress: [ "@address_2" ]
+      - addAddress: ['@address_2']
   store_7:
     name: 'BMV'
-    address: "@address_2"
+    address: '@address_2'
     enabled: true
     transporter: 'BMV'
     pricingRuleSet: '@pricing_rule_set_4'
     timeSlot: '@time_slot_1'
     __calls:
-      - addAddress: [ "@address_2" ]
+      - addAddress: ['@address_2']
   store_8:
     name: 'Acme no pricing'
-    address: "@address_1"
+    address: '@address_1'
     enabled: true
     pricingRuleSet: null
     packageSet: '@package_set_1'
     timeSlot: '@time_slot_1'
-    timeSlots: [ "@time_slot_1", "@time_slot_2" ]
+    timeSlots: ['@time_slot_1', '@time_slot_2']
     __calls:
-      - addAddress: [ "@address_1" ]
+      - addAddress: ['@address_1']
   store_9:
     name: 'Acme invalid pricing'
-    address: "@address_1"
+    address: '@address_1'
     enabled: true
     pricingRuleSet: '@pricing_rule_set_impossible'
     packageSet: '@package_set_1'
     timeSlot: '@time_slot_1'
-    timeSlots: [ "@time_slot_1", "@time_slot_2" ]
+    timeSlots: ['@time_slot_1', '@time_slot_2']
     __calls:
-      - addAddress: [ "@address_1" ]
+      - addAddress: ['@address_1']
