fix: do not send mail while running tests

--- a/.env.test
+++ b/.env.test
@@ -1,2 +1,6 @@
 APP_ENV=test
 BUSINESS_ACCOUNT_ENABLED=1
+COOPCYCLE_MAIL_URL=smtp://smtp:25
+COOPCYCLE_MAIL_TRANSPORT=smtp
+COOPCYCLE_MAIL_SENDER_ADDRESS=hello@coopcycle.dev
+COOPCYCLE_MAIL_SENDER_NAME=CoopCycle
