--- a/composer.json
+++ b/composer.json
@@ -151,7 +151,8 @@
         "flow-php/parquet": "^0.9.2",
         "flow-php/filesystem": "^0.9.2",
         "picqer/php-barcode-generator": "^2.4",
-        "shipmonk/doctrine-entity-preloader": "^1.0"
+        "shipmonk/doctrine-entity-preloader": "^1.0",
+        "z4kn4fein/php-semver": "^3.0"
     },
     "require-dev": {
         "symfony/phpunit-bridge": "^5.0",
