Add fields and migrations for GLNs

--- a/app/config/services/forms.yml
+++ b/app/config/services/forms.yml
@@ -99,6 +99,7 @@ services:
       $isDemo: '%is_demo%'
       $googleEnabled: '%env(bool:GOOGLE_ENABLED)%'
       $cashEnabled: '%env(bool:CASH_ON_DELIVERY_ENABLED)%'
+      $standtrackEnabled: '%env(STANDTRACK_API_KEY)%'
     tags: [ form.type ]
 
   AppBundle\Form\TaskType:
@@ -119,6 +120,7 @@ services:
       $country: '%country_iso%'
       $transportersConfig: '%transporters_config%'
       $billingEnabled: '%billing_enabled%'
+      $standtrackEnabled: '%env(STANDTRACK_API_KEY)%'
     tags: [ form.type ]
 
   AppBundle\Form\MenuEditor\TaxonProductType:
