--- a/app/config/message_bus/task.yml
+++ b/app/config/message_bus/task.yml
@@ -26,6 +26,7 @@ services:
       - '@AppBundle\Entity\TaskListRepository'
       - '@routing_service'
       - '@logger'
+      - '@AppBundle\Integration\Standtrack\StandtrackClient'
     tags:
       - name: command_handler
         handles: AppBundle\Domain\Task\Command\MarkAsDone
