--- a/app/config/services.yml
+++ b/app/config/services.yml
@@ -576,6 +576,10 @@ services:
     tags:
       - { name: doctrine.orm.entity_listener }
 
+  AppBundle\Integration\Standtrack\StandtrackTaskListener:
+    tags:
+      - { name: doctrine.orm.entity_listener }
+
   AppBundle\EventListener\Edifact\TaskChangedNotifier:
     tags:
       -
@@ -1537,3 +1541,8 @@ services:
     decorates: api_platform.serializer.context_builder
     arguments:
       $decorated: '@AppBundle\Serializer\CustomSerializationContextBuiler.inner'
+
+  AppBundle\Integration\Standtrack\StandtrackClient:
+    arguments:
+      $standtrackApiKey: '%env(STANDTRACK_API_KEY)%'
+
