--- a/.env.dist
+++ b/.env.dist
@@ -133,3 +133,5 @@ CUBEJS_DUCKDB_S3_SECRET_ACCESS_KEY=coopcycle
 CUBEJS_DUCKDB_S3_PATH=/images/exports/%type%
 INSEE_API_KEY=
 INSEE_API_SECRET=
+STANDTRACK_API_KEY=
+STANDTRACK_IUB_RANGE=
