remove iub range from env vars

--- a/app/config/services.yml
+++ b/app/config/services.yml
@@ -824,6 +824,12 @@ services:
       $edifactFs: '@edi_messages_filesystem'
       $appName: '%env(COOPCYCLE_APP_NAME)%'
 
+
+  AppBundle\Command\StandtrackIUBRangeSetupCommand:
+    public: true
+    arguments:
+      $standtrackApiKey: '%env(STANDTRACK_API_KEY)%'
+
   AppBundle\Action\Register:
     public: true
     arguments:
