--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -86,9 +86,15 @@ jobs:
           docker compose exec -T php vendor/bin/phpunit
       - name: Run Behat
         run: docker compose exec -T php vendor/bin/behat -f progress
-      - name: Show Symfony logs on failure
+      - name: Upload Symfony logs on failure
         if: ${{ failure() }}
-        run: docker compose exec -T php cat var/logs/test-$(date +'%Y-%m-%d').log | grep INFO
+        run: docker compose exec -T php cat var/logs/test-$(date +'%Y-%m-%d').log | grep INFO > symfony_logs.log
+      - name: Upload Symfony logs artifact
+        if: ${{ failure() }}
+        uses: actions/upload-artifact@v4
+        with:
+          name: symfony-logs
+          path: symfony_logs.log
       - name: Run Jest
         run: docker compose exec -T webpack npm run jest
   E2E:
