--- a/.github/workflows/test_php_unit.yml
+++ b/.github/workflows/test_php_unit.yml
@@ -4,13 +4,18 @@ env:
   APP_ENV: test
   NODE_ENV: test
 jobs:
-  BASE:
+  PHP_UNIT:
     name: Run PHP unit tests
     runs-on: ubuntu-latest
     env:
       STRIPE_PUBLISHABLE_KEY: ${{ secrets.STRIPE_PUBLISHABLE_KEY }}
       STRIPE_SECRET_KEY: ${{ secrets.STRIPE_SECRET_KEY }}
     steps:
+      - name: Set timezone
+        uses: szenius/set-timezone@v2.0
+        with:
+          timezoneLinux: "Europe/Paris"
+      - uses: actions/checkout@v2
       - name: Run CoopCycle Web
         uses: .github/actions/run-coopcycle-web
       - name: Run PHPUnit
