--- a/.github/workflows/test_php_unit.yml
+++ b/.github/workflows/test_php_unit.yml
@@ -17,7 +17,7 @@ jobs:
           timezoneLinux: "Europe/Paris"
       - uses: actions/checkout@v2
       - name: Run CoopCycle Web
-        uses: .github/actions/run-coopcycle-web
+        uses: ./.github/actions/run-coopcycle-web
       - name: Run PHPUnit
         run: |
           cp phpunit.xml.dist phpunit.xml
