--- a/.github/workflows/test_behat.yml
+++ b/.github/workflows/test_behat.yml
@@ -17,7 +17,7 @@ jobs:
           timezoneLinux: "Europe/Paris"
       - uses: actions/checkout@v2
       - name: Run CoopCycle Web
-        uses: .github/actions/run-coopcycle-web
+        uses: ./.github/actions/run-coopcycle-web
       - name: Run Behat
         run: docker compose exec -T php vendor/bin/behat -f progress
       - name: Show and upload Symfony test logs on failure
