--- a/.github/workflows/test_behat.yml
+++ b/.github/workflows/test_behat.yml
@@ -22,4 +22,4 @@ jobs:
         run: docker compose exec -T php vendor/bin/behat -f progress
       - name: Show and upload Symfony test logs on failure
         if: failure()
-        uses: .github/actions/upload-test-logs
+        uses: ./.github/actions/upload-test-logs
