--- a/.github/workflows/test_e2e.yml
+++ b/.github/workflows/test_e2e.yml
@@ -23,6 +23,7 @@ jobs:
       - uses: actions/checkout@v2
       - name: Run CoopCycle Web
         uses: ./.github/actions/run-coopcycle-web
+        timeout-minutes: 5
       - name: Setup CoopCycle
         run: docker compose exec -T php bin/console coopcycle:setup --env=test
       - name: Run Cypress
