--- a/.github/workflows/test_js.yml
+++ b/.github/workflows/test_js.yml
@@ -18,5 +18,6 @@ jobs:
       - uses: actions/checkout@v2
       - name: Run CoopCycle Web
         uses: ./.github/actions/run-coopcycle-web
+        timeout-minutes: 5
       - name: Run Jest
         run: docker compose exec -T webpack npm run jest
