limit console output to warnings and above

--- a/.github/actions/upload-test-logs/action.yml
+++ b/.github/actions/upload-test-logs/action.yml
@@ -1,15 +1,15 @@
-name: Upload test logs
+name: Upload logs from the test environment
 
 runs:
   using: "composite"
   steps:
-  - name: Show Symfony logs
+  - name: Show Symfony warnings
     shell: bash
-    run: docker compose exec -T php cat var/logs/test-$(date +'%Y-%m-%d').log | grep -v DEBUG
-  - name: Upload Symfony logs
+    run: docker compose exec -T php cat var/logs/test-$(date +'%Y-%m-%d').log | grep -v -e DEBUG -e INFO
+  - name: Copy Symfony logs
     shell: bash
     run: docker compose exec -T php cat var/logs/test-$(date +'%Y-%m-%d').log > symfony_logs.log
-  - name: Upload Symfony logs artifact
+  - name: Upload Symfony logs
     uses: actions/upload-artifact@v4
     with:
       name: symfony-logs
