--- a/.github/workflows/test_behat.yml
+++ b/.github/workflows/test_behat.yml
@@ -21,6 +21,15 @@ jobs:
         timeout-minutes: 5
       - name: Run Behat
         run: docker compose exec -T php vendor/bin/behat -f progress
-      - name: Show and upload Symfony test logs on failure
+      - name: Show Symfony warnings on failure
         if: failure()
-        uses: ./.github/actions/upload-test-logs
+        uses: ./.github/actions/show-symfony-warnings
+      - name: Copy Symfony logs
+        if: failure()
+        run: docker compose exec -T php cat var/logs/test-$(date +'%Y-%m-%d').log > symfony_logs.log
+      - name: Upload Symfony logs
+        if: failure()
+        uses: actions/upload-artifact@v4
+        with:
+          name: symfony-logs
+          path: symfony_logs.log
