--- a/.github/workflows/test_behat.yml
+++ b/.github/workflows/test_behat.yml
@@ -24,12 +24,6 @@ jobs:
       - name: Show Symfony warnings on failure
         if: failure()
         uses: ./.github/actions/show-symfony-warnings
-      - name: Copy Symfony logs
+      - name: Upload Symfony logs on failure
         if: failure()
-        run: docker compose exec -T php cat var/logs/test-$(date +'%Y-%m-%d').log > symfony_logs.log
-      - name: Upload Symfony logs
-        if: failure()
-        uses: actions/upload-artifact@v4
-        with:
-          name: symfony-logs
-          path: symfony_logs.log
+        uses: ./.github/actions/upload-symfony-logs
