Use 2 env vars for Woop URLs.

--- a/.env.dist
+++ b/.env.dist
@@ -101,7 +101,8 @@ OPTIN_EXPORT_USERS_ENABLED=0
 DV4CUL_ENABLED=0
 WOOPIT_CLIENT_ID=
 WOOPIT_CLIENT_SECRET=
-WOOPIT_HOST=recette.gcp.last-mile.fr
+WOOPIT_AUTHENTICATION_API_URL=https://connect.recette.gcp.last-mile.fr/api/oauth/token
+WOOPIT_CARRIER_API_URL=https://car-api.recette.gcp.last-mile.fr
 DABBA_ENABLED=0
 DABBA_BASE_URL=https://api.dabba-consigne.fr
 DABBA_CLIENT_ID=
