--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -207,7 +207,7 @@ framework:
             cubejs.client:
                 base_uri: "%env(CUBEJS_API_URL)%/"
             woopit.http_client:
-                base_uri: 'https://car-api.%env(WOOPIT_HOST)%/'
+                base_uri: '%env(WOOPIT_CARRIER_API_URL)%/'
             dabba.client:
                 base_uri: "%env(DABBA_BASE_URL)%/"
             umap.client:
