Use another env var for BC.

--- a/.env.dist
+++ b/.env.dist
@@ -132,5 +132,5 @@ CUBEJS_DUCKDB_S3_REGION=fr-fr
 CUBEJS_DUCKDB_S3_ACCESS_KEY_ID=minio
 CUBEJS_DUCKDB_S3_SECRET_ACCESS_KEY=coopcycle
 CUBEJS_DUCKDB_S3_PATH=/images/exports/%type%
-INSEE_API_KEY=
+INSEE_PORTAIL_API_KEY=
 STANDTRACK_API_KEY=
