--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -227,7 +227,7 @@ framework:
             insee.client:
                 base_uri: "https://api.insee.fr/api-sirene/3.11/"
                 headers:
-                    X-INSEE-Api-Key-Integration: '%env(INSEE_API_KEY)%'
+                    X-INSEE-Api-Key-Integration: '%env(INSEE_PORTAIL_API_KEY)%'
 
 # Twig Configuration
 twig:
