--- a/docker/nginx/conf.d/default.conf
+++ b/docker/nginx/conf.d/default.conf
@@ -62,6 +62,8 @@ server {
         fastcgi_split_path_info ^(.+\.php)(/.*)$;
         include fastcgi_params;
 
+        fastcgi_read_timeout 300s;
+
         # optionally set the value of the environment variables used in the application
         fastcgi_param APP_ENV dev;
         fastcgi_param APP_DEBUG 1;
