--- a/cypress/fixtures/stores_excl_setup.yml
+++ b/cypress/fixtures/stores_excl_setup.yml
@@ -3,6 +3,7 @@ include:
   - admin_user.yml
   - user_courier.yml
   - addresses.yml
+  - packages.yml
 
 AppBundle\Entity\Base\GeoCoordinates:
   geo_warehouse:
@@ -62,6 +63,7 @@ AppBundle\Entity\Store:
     enabled: true
     pricingRuleSet: '@pricing_rule_set_1'
     timeSlot: '@time_slot_1'
+    packageSet: '@package_set_1'
     __calls:
       - addAddress: [ "@warehouse" ]
       - addAddress: [ "@client_1" ]
